# activation-steering

./: README.md  demo-chat.py  demo-extract.py  pyproject.toml
activation_steering/: __init__.py  config.py  console.py  leash_layer.py  malleable_model.py  steering_dataset.py  steering_vector.py  utils.py
demo-data/: alpaca.json  condition_harmful.json
demo-data-package/: behavior_refusal.json  condition_multiple.json
docs/: config.md  console.md  faq.md  leash_layer.md  malleable_model.md  quickstart.md  steering_dataset.md  steering_vector.md  utils.md
docs/demo-data/: condition_multiple.json  prompt_alpaca_plus_replicated.json  replicate.py  response_refusal_replicated.json
