[tool.poetry]
name = "activation_steering"
version = "0.1.0"
description = ""
authors = ["Bruce W. Lee <bruce.lee1@ibm.com>"]
maintainers = ["Bruce W. Lee <bruce.lee1@ibm.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.4"
scikit-learn = "^1.5.0"
torch = "^2.3.1"
transformers = "^4.41.2"
accelerate = "^0.31.0"
tqdm = "^4.66.4"
gguf = "^0.6.0"
rich = "^13.7.1"
matplotlib = "^3.9.0"
einops = "^0.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
